crates/swc_css_parser/tests/errors/comments/bad-comment-3/output.stderr
error: Unterminated block comment
 --> $DIR/tests/errors/comments/bad-comment-3/input.css:1:1
  |
1 | /*! bad comment 
  | ^^^^^^^^^^^^^^^^

